<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.johanolsson.testcal.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_equal"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonMinus"
        app:layout_constraintLeft_toRightOf="@+id/button0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_3"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintRight_toLeftOf="@+id/buttonMulti"
        app:layout_constraintLeft_toRightOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_6"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintRight_toLeftOf="@+id/buttonDiv"
        app:layout_constraintLeft_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_9"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/numField"
        app:layout_constraintRight_toLeftOf="@+id/buttonDiv"
        app:layout_constraintLeft_toRightOf="@+id/button8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/numField"
        app:layout_constraintRight_toLeftOf="@+id/button8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/numField"
        app:layout_constraintRight_toLeftOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_4"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintBottom_toTopOf="@+id/buttonComma"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/buttonComma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_comma"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonEqual"
        app:layout_constraintLeft_toRightOf="@+id/buttonComma"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_div"
        app:layout_constraintTop_toBottomOf="@+id/buttonDel"
        app:layout_constraintBottom_toTopOf="@+id/buttonMulti"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonDel"
        />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_multi"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDiv"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonDiv" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMulti"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonMulti"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonMulti"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_plus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonMinus"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:text="@string/button_del"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@+id/numField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button9" />

    <EditText
        android:id="@+id/numField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

</android.support.constraint.ConstraintLayout>
